# bigdata

./: README.md  csv_to_mongodb copy.py  csv_to_mongodb.py  main.py  pyproject.toml  schemas.py
data/: datasur.rutas.csv  registros_aduana_10.json  registros_aduana_100.csv  registros_aduana_100.json  registros_aduana_mongodb.json  registros_aduana_nl.json  registros_aduana_sinteticos.csv
templates/: 404.html  base.html  error.html  index.html  rutas.html
